--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,15 @@
 # Core / Allgemein
 # ==============================
 
-numpy
-pandas
-scikit-learn
+numpy==2.2.6
+pandas==2.3.3
+scikit-learn==1.7.1
 
 # ==============================
 # Deep Learning Framework
 # ==============================
 
-torch
+torch==2.9.1
 torchvision
 timm
 
